--- a/DatingApp-SPA/src/app/register/register.component.html
+++ b/DatingApp-SPA/src/app/register/register.component.html
@@ -1,3 +1,22 @@
-<p>
-  register works!
-</p>
+<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+  <h2 class="text-center text-primary"> Sign Up</h2>
+  <div class="form-group">
+    <label for="username">Username</label>
+    <input type="text" class="form-control" formControlName="username" [(ngModel)]="model.username" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
+    <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
+        <div *ngIf="f.username.errors.required">Username is required</div>
+    </div>
+</div>
+<div class="form-group">
+    <label for="password">Password</label>
+    <input type="password" class="form-control" formControlName="password" [(ngModel)]="model.password" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+    <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+        <div *ngIf="f.password.errors.required">Password is required</div>
+        <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
+    </div>
+</div>
+<div class = "form-group text-center">
+  <button class="btn btn-success" type="submit">Register</button>
+  <button class="btn btn-default" type="button" (click)="cancel()">Cancel</button>
+</div>
+</form>
